--- a/index.html
+++ b/index.html
@@ -321,11 +321,16 @@
             <div class="footer">
                 <p>© 2025 EquationLab. All rights reserved.</p>
                 <p style="margin-top: 0.5rem;">
-                    <a href="mailto:equationlabapp@gmail.com">Contact</a>
+                    <a href="mailto:equationlabapp@gmail.com">Contact</a> | <a href="https://facebook.com/equationlabapp" target="_blank">Facebook</a> | <a href="https://reddit.com/r/equationlab" target="_blank">Reddit</a> | <a href="https://x.com/equationlabapp" target="_blank">X</a> |
+                    <a href="https://facebook.com/equationlabapp" target="_blank">Facebook</a> |
+                    <a href="https://reddit.com/r/equationlab" target="_blank">Reddit</a> |
+                    <a href="https://x.com/equationlabapp" target="_blank">X</a>
                 </p>
             </div>
         </div>
     </main>
 </body>
 </html>
+
+
 
