--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
             <div class="footer">
                 <p>© 2025 EquationLab. All rights reserved.</p>
                 <p style="margin-top: 0.5rem;">
-                    <a href="mailto:equationlabapp@gmail.com">Contact</a> | <a href="https://facebook.com/EquationLabApp" target="_blank">Facebook</a> | <a href="https://reddit.com/r/EquationLabApp" target="_blank">Reddit</a> | <a href="https://x.com/EquationLabApp" target="_blank">X</a> | <a href="https://linkedin.com/in/equationlab-app-b194b4398" target="_blank">LinkedIn</a> |
-                    <a href="https://facebook.com/EquationLabApp" target="_blank">Facebook</a> |
+                    <a href="mailto:equationlabapp@gmail.com">Contact</a> | <a href="https://www.facebook.com/profile.php?id=61584556264596" target="_blank">Facebook</a> | <a href="https://reddit.com/r/EquationLabApp" target="_blank">Reddit</a> | <a href="https://x.com/EquationLabApp" target="_blank">X</a> | <a href="https://linkedin.com/in/equationlab-app-b194b4398" target="_blank">LinkedIn</a> |
+                    <a href="https://www.facebook.com/profile.php?id=61584556264596" target="_blank">Facebook</a> |
                     <a href="https://reddit.com/r/EquationLabApp" target="_blank">Reddit</a> |
                     <a href="https://x.com/EquationLabApp" target="_blank">X</a> | <a href="https://linkedin.com/in/equationlab-app-b194b4398" target="_blank">LinkedIn</a>
                 </p>
