--- a/index.html
+++ b/index.html
@@ -213,6 +213,115 @@
             color: #00d4ff;
         }
 
+        /* Pricing Section */
+        .pricing-section {
+            margin-top: 4rem;
+            padding-top: 3rem;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .pricing-title {
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+            background: linear-gradient(90deg, #00d4ff, #7b2cbf);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .pricing-subtitle {
+            color: #a0aec0;
+            margin-bottom: 2rem;
+        }
+
+        .pricing-cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .pricing-card {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 16px;
+            padding: 1.5rem;
+            width: 200px;
+            text-align: center;
+            position: relative;
+            transition: transform 0.2s, border-color 0.2s;
+        }
+
+        .pricing-card:hover {
+            transform: translateY(-4px);
+            border-color: rgba(0, 212, 255, 0.3);
+        }
+
+        .pricing-card.featured {
+            border-color: #00d4ff;
+            background: rgba(0, 212, 255, 0.1);
+        }
+
+        .plan-badge {
+            position: absolute;
+            top: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: linear-gradient(90deg, #00d4ff, #7b2cbf);
+            color: white;
+            font-size: 0.7rem;
+            font-weight: 600;
+            padding: 0.25rem 0.75rem;
+            border-radius: 20px;
+        }
+
+        .plan-name {
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: #e2e8f0;
+            margin-bottom: 0.5rem;
+        }
+
+        .plan-price {
+            font-size: 2rem;
+            font-weight: 700;
+            color: #00d4ff;
+        }
+
+        .plan-period {
+            font-size: 0.8rem;
+            color: #718096;
+            margin-bottom: 1rem;
+        }
+
+        .plan-features {
+            list-style: none;
+            text-align: left;
+            font-size: 0.8rem;
+            color: #a0aec0;
+        }
+
+        .plan-features li {
+            padding: 0.3rem 0;
+            padding-left: 1rem;
+            position: relative;
+        }
+
+        .plan-features li::before {
+            content: "✓";
+            position: absolute;
+            left: 0;
+            color: #00d4ff;
+        }
+
+        .pricing-compare {
+            font-size: 0.85rem;
+            color: #718096;
+            font-style: italic;
+        }
+
         /* Floating equation decorations */
         .equation {
             position: fixed;
@@ -316,6 +425,62 @@
                     <div class="stat-number">1,297</div>
                     <div class="stat-label">Derivation Steps</div>
                 </div>
+            </div>
+
+            <!-- Pricing Section -->
+            <div class="pricing-section">
+                <h2 class="pricing-title">Simple, Affordable Pricing</h2>
+                <p class="pricing-subtitle">Professional tools at a fraction of the cost</p>
+                <div class="pricing-cards">
+                    <div class="pricing-card">
+                        <div class="plan-name">Free</div>
+                        <div class="plan-price">$0</div>
+                        <div class="plan-period">forever</div>
+                        <ul class="plan-features">
+                            <li>Basic equations</li>
+                            <li>Limited solves per day</li>
+                            <li>Community support</li>
+                        </ul>
+                    </div>
+                    <div class="pricing-card featured">
+                        <div class="plan-badge">Most Popular</div>
+                        <div class="plan-name">Pro</div>
+                        <div class="plan-price">$7.50</div>
+                        <div class="plan-period">per month</div>
+                        <ul class="plan-features">
+                            <li>All 3,000+ equations</li>
+                            <li>Unlimited solves</li>
+                            <li>Interactive graphing</li>
+                            <li>Export to slides</li>
+                            <li>Step-by-step derivations</li>
+                            <li>Offline mode</li>
+                        </ul>
+                    </div>
+                    <div class="pricing-card">
+                        <div class="plan-name">Professor</div>
+                        <div class="plan-price">$7.50</div>
+                        <div class="plan-period">per month</div>
+                        <ul class="plan-features">
+                            <li>All Pro features</li>
+                            <li>Quiz builder</li>
+                            <li>Class management</li>
+                            <li>Student analytics</li>
+                        </ul>
+                    </div>
+                    <div class="pricing-card">
+                        <div class="plan-name">Enterprise</div>
+                        <div class="plan-price">Custom</div>
+                        <div class="plan-period">contact us</div>
+                        <ul class="plan-features">
+                            <li>Everything in Pro</li>
+                            <li>Custom equation sets</li>
+                            <li>SSO & admin dashboard</li>
+                            <li>Priority support</li>
+                            <li>API access</li>
+                        </ul>
+                    </div>
+                </div>
+                <p class="pricing-compare">Compare: MATLAB $940/yr • Mathcad $660/yr • Wolfram $300/yr</p>
             </div>
 
             <div class="footer">
