Revise Privacy Policy layout and content
Updated the Privacy Policy page with new styles and content, including changes to the header, logo, and various sections for improved clarity and aesthetics.

--- a/privacypolicy/index.html
+++ b/privacypolicy/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - EquationLab</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,10 +15,10 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+            color: #e2e8f0;
+            background: linear-gradient(135deg, #0a0e1a 0%, #0d1525 50%, #0a1628 100%);
             min-height: 100vh;
         }
 
@@ -25,66 +28,112 @@
             padding: 40px 20px;
         }
 
-        .policy-card {
-            background: #fff;
-            border-radius: 16px;
-            padding: 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+        /* Header matching main site */
+        .header {
+            text-align: center;
+            margin-bottom: 40px;
+            padding-bottom: 30px;
+            border-bottom: 1px solid rgba(56, 189, 248, 0.2);
         }
 
         .logo {
-            text-align: center;
-            margin-bottom: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            margin-bottom: 10px;
+        }
+
+        .logo-icon {
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(135deg, #10b981 0%, #3b82f6 50%, #8b5cf6 100%);
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
         }
 
         .logo h1 {
-            font-size: 2.5rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-size: 2rem;
+            font-weight: 700;
+            background: linear-gradient(135deg, #38bdf8 0%, #818cf8 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
 
-        .logo .tagline {
-            color: #666;
+        .tagline {
+            color: #64748b;
             font-size: 0.95rem;
-            margin-top: 5px;
         }
 
+        /* Page Title */
         h2 {
-            color: #1a1a2e;
-            font-size: 1.75rem;
-            margin-bottom: 20px;
-            padding-bottom: 10px;
-            border-bottom: 3px solid #667eea;
-        }
-
-        h3 {
-            color: #333;
-            font-size: 1.25rem;
-            margin: 25px 0 15px 0;
-        }
-
-        p {
+            font-size: 2rem;
+            font-weight: 700;
+            background: linear-gradient(135deg, #38bdf8 0%, #818cf8 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-align: center;
             margin-bottom: 15px;
-            color: #555;
         }
 
+        .dates {
+            text-align: center;
+            color: #64748b;
+            font-size: 0.9rem;
+            margin-bottom: 30px;
+        }
+
+        /* Highlight Box */
         .highlight-box {
-            background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%);
-            border-left: 4px solid #4caf50;
+            background: linear-gradient(135deg, rgba(16, 185, 129, 0.1) 0%, rgba(59, 130, 246, 0.1) 100%);
+            border: 1px solid rgba(56, 189, 248, 0.3);
             padding: 20px;
-            border-radius: 8px;
+            border-radius: 12px;
             margin: 25px 0;
+            text-align: center;
         }
 
         .highlight-box p {
-            color: #2e7d32;
+            color: #38bdf8;
             font-weight: 600;
             font-size: 1.1rem;
             margin: 0;
         }
 
+        /* Sections */
+        .section {
+            margin: 35px 0;
+        }
+
+        h3 {
+            color: #38bdf8;
+            font-size: 1.25rem;
+            font-weight: 600;
+            margin: 25px 0 15px 0;
+        }
+
+        p {
+            margin-bottom: 15px;
+            color: #94a3b8;
+        }
+
+        a {
+            color: #38bdf8;
+            text-decoration: none;
+            transition: color 0.2s;
+        }
+
+        a:hover {
+            color: #818cf8;
+            text-decoration: underline;
+        }
+
+        /* Checklist */
         .checklist {
             list-style: none;
             padding: 0;
@@ -92,24 +141,30 @@
         }
 
         .checklist li {
-            padding: 10px 0 10px 35px;
+            padding: 12px 0 12px 35px;
             position: relative;
-            color: #555;
+            color: #94a3b8;
+            border-bottom: 1px solid rgba(56, 189, 248, 0.1);
+        }
+
+        .checklist li:last-child {
+            border-bottom: none;
         }
 
         .checklist li::before {
-            content: "✅";
+            content: "✓";
             position: absolute;
             left: 0;
-            top: 10px;
+            top: 12px;
+            color: #10b981;
+            font-weight: bold;
+            font-size: 1.1rem;
         }
 
-        .section {
-            margin: 35px 0;
-        }
-
+        /* Contact Box */
         .contact-info {
-            background: #f8f9fa;
+            background: rgba(15, 23, 42, 0.6);
+            border: 1px solid rgba(56, 189, 248, 0.2);
             padding: 25px;
             border-radius: 12px;
             margin-top: 30px;
@@ -117,163 +172,169 @@
 
         .contact-info h3 {
             margin-top: 0;
-            color: #1a1a2e;
         }
 
-        .contact-info a {
-            color: #667eea;
-            text-decoration: none;
-        }
-
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
-
-        .dates {
-            text-align: center;
-            color: #888;
-            font-size: 0.9rem;
-            margin-bottom: 30px;
-        }
-
-        .footer {
-            text-align: center;
-            margin-top: 40px;
-            padding-top: 25px;
-            border-top: 1px solid #eee;
-            color: #888;
-            font-size: 0.9rem;
-        }
-
+        /* Back Button */
         .back-link {
             text-align: center;
-            margin-top: 30px;
+            margin-top: 40px;
         }
 
         .back-link a {
             display: inline-block;
-            padding: 12px 30px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 14px 32px;
+            background: linear-gradient(135deg, #0ea5e9 0%, #6366f1 100%);
             color: #fff;
             text-decoration: none;
-            border-radius: 25px;
+            border-radius: 8px;
             font-weight: 600;
             transition: transform 0.2s, box-shadow 0.2s;
         }
 
         .back-link a:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 10px 40px rgba(14, 165, 233, 0.3);
+            text-decoration: none;
         }
 
+        /* Footer */
+        .footer {
+            text-align: center;
+            margin-top: 50px;
+            padding-top: 25px;
+            border-top: 1px solid rgba(56, 189, 248, 0.2);
+            color: #64748b;
+            font-size: 0.9rem;
+        }
+
+        /* Responsive */
         @media (max-width: 600px) {
-            .policy-card {
-                padding: 25px;
+            .container {
+                padding: 25px 15px;
             }
 
             .logo h1 {
-                font-size: 2rem;
+                font-size: 1.5rem;
             }
 
             h2 {
                 font-size: 1.5rem;
+            }
+
+            h3 {
+                font-size: 1.1rem;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="policy-card">
+        <!-- Header -->
+        <div class="header">
             <div class="logo">
+                <div class="logo-icon">🔢</div>
                 <h1>EquationLab</h1>
-                <p class="tagline">From F=ma to Superfluid Helium Lambda Point Transitions</p>
             </div>
+            <p class="tagline">Engineering Equation Solver & Calculator</p>
+        </div>
 
-            <h2>Privacy Policy</h2>
+        <!-- Title -->
+        <h2>Privacy Policy</h2>
 
-            <div class="dates">
-                <p><strong>Effective Date:</strong> December 4, 2024 | <strong>Last Updated:</strong> December 4, 2024</p>
-            </div>
+        <div class="dates">
+            <p><strong>Effective Date:</strong> December 4, 2025 &nbsp;|&nbsp; <strong>Last Updated:</strong> December 4, 2025</p>
+        </div>
 
-            <div class="highlight-box">
-                <p>🔒 The short version: We don't collect your data. Your privacy is fully protected.</p>
-            </div>
+        <!-- Highlight -->
+        <div class="highlight-box">
+            <p>🔒 The short version: We don't collect your data. Your privacy is fully protected.</p>
+        </div>
 
-            <div class="section">
-                <h3>Introduction</h3>
-                <p>McGee Resources, LLC ("we," "our," or "us") operates the EquationLab application. This Privacy Policy explains our practices regarding the collection, use, and disclosure of information when you use our application.</p>
-            </div>
+        <!-- Introduction -->
+        <div class="section">
+            <h3>Introduction</h3>
+            <p>McGee Resources, LLC ("we," "our," or "us") operates the EquationLab application. This Privacy Policy explains our practices regarding the collection, use, and disclosure of information when you use our application.</p>
+        </div>
 
-            <div class="section">
-                <h3>Information We Collect</h3>
-                <p><strong>We do not collect any personal information.</strong></p>
-                <p>EquationLab is designed with privacy as a core principle. The application:</p>
-                <ul class="checklist">
-                    <li>Does NOT collect personal information</li>
-                    <li>Does NOT track your usage or behavior</li>
-                    <li>Does NOT use analytics or tracking tools</li>
-                    <li>Does NOT require account creation or login</li>
-                    <li>Does NOT access your contacts, location, or other device data</li>
-                    <li>Does NOT contain advertisements</li>
-                </ul>
-            </div>
+        <!-- Information We Collect -->
+        <div class="section">
+            <h3>Information We Collect</h3>
+            <p><strong style="color: #38bdf8;">We do not collect any personal information.</strong></p>
+            <p>EquationLab is designed with privacy as a core principle. The application:</p>
+            <ul class="checklist">
+                <li>Does NOT collect personal information</li>
+                <li>Does NOT track your usage or behavior</li>
+                <li>Does NOT use analytics or tracking tools</li>
+                <li>Does NOT require account creation or login</li>
+                <li>Does NOT access your contacts, location, or other device data</li>
+                <li>Does NOT contain advertisements</li>
+            </ul>
+        </div>
 
-            <div class="section">
-                <h3>Data Storage</h3>
-                <p>All application data, including your favorites and calculation history, is stored <strong>locally on your device only</strong>. This data:</p>
-                <ul class="checklist">
-                    <li>Never leaves your device</li>
-                    <li>Is not transmitted to any server</li>
-                    <li>Is not accessible by us or any third party</li>
-                    <li>Is completely under your control</li>
-                </ul>
-                <p>You can delete this data at any time by uninstalling the application or clearing the app data through your device settings.</p>
-            </div>
+        <!-- Data Storage -->
+        <div class="section">
+            <h3>Data Storage</h3>
+            <p>All application data, including your favorites and calculation history, is stored <strong style="color: #38bdf8;">locally on your device only</strong>. This data:</p>
+            <ul class="checklist">
+                <li>Never leaves your device</li>
+                <li>Is not transmitted to any server</li>
+                <li>Is not accessible by us or any third party</li>
+                <li>Is completely under your control</li>
+            </ul>
+            <p>You can delete this data at any time by uninstalling the application or clearing the app data through your device settings.</p>
+        </div>
 
-            <div class="section">
-                <h3>In-App Purchases</h3>
-                <p>EquationLab offers optional premium features through in-app purchases. These transactions are processed entirely by the <strong>Microsoft Store</strong>. We do not have access to your payment information. Please refer to <a href="https://privacy.microsoft.com/en-us/privacystatement" target="_blank" rel="noopener">Microsoft's Privacy Statement</a> for information on how Microsoft handles payment data.</p>
-            </div>
+        <!-- In-App Purchases -->
+        <div class="section">
+            <h3>In-App Purchases</h3>
+            <p>EquationLab offers optional premium features through in-app purchases. These transactions are processed entirely by the <strong style="color: #38bdf8;">Microsoft Store</strong>. We do not have access to your payment information. Please refer to <a href="https://privacy.microsoft.com/en-us/privacystatement" target="_blank" rel="noopener">Microsoft's Privacy Statement</a> for information on how Microsoft handles payment data.</p>
+        </div>
 
-            <div class="section">
-                <h3>Third-Party Services</h3>
-                <p>The only third-party service used by EquationLab is:</p>
-                <ul class="checklist">
-                    <li><strong>Microsoft Store</strong> — For app distribution and in-app purchase processing</li>
-                </ul>
-                <p>We do not integrate any other third-party services, analytics platforms, or advertising networks.</p>
-            </div>
+        <!-- Third-Party Services -->
+        <div class="section">
+            <h3>Third-Party Services</h3>
+            <p>The only third-party service used by EquationLab is:</p>
+            <ul class="checklist">
+                <li><strong style="color: #e2e8f0;">Microsoft Store</strong> — For app distribution and in-app purchase processing</li>
+            </ul>
+            <p>We do not integrate any other third-party services, analytics platforms, or advertising networks.</p>
+        </div>
 
-            <div class="section">
-                <h3>Children's Privacy</h3>
-                <p>EquationLab does not collect any personal information from anyone, including children under 13 years of age. The app is safe for users of all ages.</p>
-            </div>
+        <!-- Children's Privacy -->
+        <div class="section">
+            <h3>Children's Privacy</h3>
+            <p>EquationLab does not collect any personal information from anyone, including children under 13 years of age. The app is safe for users of all ages.</p>
+        </div>
 
-            <div class="section">
-                <h3>Changes to This Privacy Policy</h3>
-                <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated "Last Updated" date. We encourage you to review this Privacy Policy periodically.</p>
-            </div>
+        <!-- Changes -->
+        <div class="section">
+            <h3>Changes to This Privacy Policy</h3>
+            <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated "Last Updated" date. We encourage you to review this Privacy Policy periodically.</p>
+        </div>
 
-            <div class="section">
-                <h3>Your Rights</h3>
-                <p>Since we do not collect any personal data, there is no personal information to access, modify, or delete. Your data remains entirely on your device and under your control.</p>
-            </div>
+        <!-- Your Rights -->
+        <div class="section">
+            <h3>Your Rights</h3>
+            <p>Since we do not collect any personal data, there is no personal information to access, modify, or delete. Your data remains entirely on your device and under your control.</p>
+        </div>
 
-            <div class="contact-info">
-                <h3>Contact Us</h3>
-                <p>If you have any questions about this Privacy Policy, please contact us:</p>
-                <p><strong>McGee Resources, LLC</strong></p>
-                <p>Email: <a href="mailto:equationlabapp@gmail.com">equationlabapp@gmail.com</a></p>
-                <p>Website: <a href="https://www.equationlabapp.com">www.equationlabapp.com</a></p>
-            </div>
+        <!-- Contact -->
+        <div class="contact-info">
+            <h3>Contact Us</h3>
+            <p>If you have any questions about this Privacy Policy, please contact us:</p>
+            <p><strong style="color: #e2e8f0;">McGee Resources, LLC</strong></p>
+            <p>Email: <a href="mailto:equationlabapp@gmail.com">equationlabapp@gmail.com</a></p>
+            <p>Website: <a href="https://www.equationlabapp.com">www.equationlabapp.com</a></p>
+        </div>
 
-            <div class="back-link">
-                <a href="https://www.equationlabapp.com">← Back to EquationLab</a>
-            </div>
+        <!-- Back Button -->
+        <div class="back-link">
+            <a href="https://www.equationlabapp.com">← Back to EquationLab</a>
+        </div>
 
-            <div class="footer">
-                <p>© 2024 McGee Resources, LLC. All rights reserved.</p>
-            </div>
+        <!-- Footer -->
+        <div class="footer">
+            <p>© 2025 McGee Resources, LLC. All rights reserved.</p>
         </div>
     </div>
 </body>
