Enhance index.html with equations and pricing info
Added floating equations and updated the main content structure with features, email signup, and pricing sections.

--- a/index.html
+++ b/index.html
@@ -351,4 +351,118 @@
         }
     }
 </style>
+<!-- Floating equations background -->
+<span class="equation eq1">E = mc²</span>
+<span class="equation eq2">F = ma</span>
+<span class="equation eq3">PV = nRT</span>
+<span class="equation eq4">σ = F/A</span>
+<span class="equation eq5">∇ × E = -∂B/∂t</span>
+<span class="equation eq6">Q = mcΔT</span>
 
+<main class="main-content">
+    <div class="container">
+        <img src="logo.png" alt="EquationLab Logo" class="logo-large">
+        <h1 class="brand-name">EquationLab</h1>
+        <p class="tagline">Engineering Equation Solver & Calculator</p>
+        
+        <p class="coming-soon">Coming Soon</p>
+        
+        <div class="features">
+            <span class="feature">3,000+ Equations</span>
+            <span class="feature">20+ Disciplines</span>
+            <span class="feature">Step-by-Step Solutions</span>
+            <span class="feature">Unit Conversion</span>
+            <span class="feature">Symbolic Solver</span>
+            <span class="feature">Project Tracker</span>
+            <span class="feature">Cost Tracker</span>
+            <span class="feature">To-Do Lists</span>
+            <span class="feature">Algorithm Generator</span>
+        </div>
+
+        <div class="email-signup">
+            <p>Get notified when we launch</p>
+            <form class="email-form" action="#" method="post">
+                <input type="email" class="email-input" placeholder="Enter your email" required>
+                <button type="submit" class="submit-btn">Notify Me</button>
+            </form>
+        </div>
+
+        <div class="stats">
+            <div class="stat">
+                <div class="stat-number">3,000+</div>
+                <div class="stat-label">Equations</div>
+            </div>
+            <div class="stat">
+                <div class="stat-number">20+</div>
+                <div class="stat-label">Disciplines</div>
+            </div>
+            <div class="stat">
+                <div class="stat-number">1,297</div>
+                <div class="stat-label">Derivation Steps</div>
+            </div>
+        </div>
+
+        <!-- Pricing Section -->
+        <div class="pricing-section">
+            <h2 class="pricing-title">Simple, Affordable Pricing</h2>
+            <p class="pricing-subtitle">Professional tools at a fraction of the cost</p>
+            <div class="pricing-cards">
+                <div class="pricing-card">
+                    <div class="plan-name">Free</div>
+                    <div class="plan-price">$0</div>
+                    <div class="plan-period">forever</div>
+                    <ul class="plan-features">
+                        <li>Basic equations</li>
+                        <li>Limited solves per day</li>
+                        <li>Community support</li>
+                    </ul>
+                </div>
+                <div class="pricing-card featured">
+                    <div class="plan-badge">Most Popular</div>
+                    <div class="plan-name">Pro</div>
+                    <div class="plan-price">$7.50</div>
+                    <div class="plan-period">per month</div>
+                    <ul class="plan-features">
+                        <li>All 3,000+ equations</li>
+                        <li>Unlimited solves</li>
+                        <li>Interactive graphing</li>
+                        <li>Export to slides</li>
+                        <li>Step-by-step derivations</li>
+                        <li>Offline mode</li>
+                    </ul>
+                </div>
+                <div class="pricing-card">
+                    <div class="plan-name">Professor</div>
+                    <div class="plan-price">$7.50</div>
+                    <div class="plan-period">per month</div>
+                    <ul class="plan-features">
+                        <li>All Pro features</li>
+                        <li>Quiz builder</li>
+                        <li>Class management</li>
+                        <li>Student analytics</li>
+                    </ul>
+                </div>
+                <div class="pricing-card">
+                    <div class="plan-name">Enterprise</div>
+                    <div class="plan-price">Custom</div>
+                    <div class="plan-period">contact us</div>
+                    <ul class="plan-features">
+                        <li>Everything in Pro</li>
+                        <li>Custom equation sets</li>
+                        <li>SSO & admin dashboard</li>
+                        <li>Priority support</li>
+                        <li>API access</li>
+                    </ul>
+                </div>
+            </div>
+            <p class="pricing-compare">Compare: MATLAB $940/yr • Mathcad $660/yr • Wolfram $300/yr</p>
+        </div>
+
+        <div class="footer">
+            <p>© 2025 EquationLab. All rights reserved.</p>
+            <p style="margin-top: 0.5rem;">
+                <a href="mailto:equationlabapp@gmail.com">Contact</a> | <a href="https://www.facebook.com/profile.php?id=61584556264596" target="_blank">Facebook</a> | <a href="https://reddit.com/r/EquationLabApp" target="_blank">Reddit</a> | <a href="https://x.com/EquationLabApp" target="_blank">X</a> | <a href="https://linkedin.com/in/equationlab-app-b194b4398" target="_blank">LinkedIn</a> | <a href="https://www.youtube.com/@EquationLabApp" target="_blank">YouTube</a> | <a href="https://discord.gg/p8XnbJKT" target="_blank">Discord</a> |
+            </p>
+        </div>
+    </div>
+</main>
